--- a/doyouagree/en.lproj/MainStoryboard.storyboard
+++ b/doyouagree/en.lproj/MainStoryboard.storyboard
@@ -12,40 +12,28 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DMH-Zt-wKy">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" highlighted="YES" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DMH-Zt-wKy">
                                 <accessibility key="accessibilityConfiguration">
-                                    <accessibilityTraits key="traits" none="YES" updatesFrequently="YES"/>
+                                    <accessibilityTraits key="traits" none="YES" keyboardKey="YES" updatesFrequently="YES"/>
                                 </accessibility>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="BLh-Lk-Arb"/>
+                                    <constraint firstAttribute="width" constant="131" id="sVD-CE-N5R"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" enablesReturnKeyAutomatically="YES"/>
                                 <connections>
                                     <outlet property="delegate" destination="2" id="0mm-W0-o5K"/>
+                                    <segue destination="inp-wL-rrB" kind="modal" identifier="enterCodeSegue" modalTransitionStyle="flipHorizontal" id="H2n-TD-ZOX"/>
                                 </connections>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Enter Code" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kIi-Nc-YRg">
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="IwK-tI-eL8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ejZ-DS-Uqv">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="41" id="aFD-J1-mCs"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Enter">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="inp-wL-rrB" kind="modal" identifier="enterCodeSegue" modalTransitionStyle="flipHorizontal" id="aNI-Z4-KOJ"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Not Logged in" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqG-Is-eVM">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -54,21 +42,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ejZ-DS-Uqv" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="1ch-zY-3Fq"/>
-                            <constraint firstItem="kIi-Nc-YRg" firstAttribute="top" secondItem="3" secondAttribute="top" constant="134" id="9Qt-fm-sP7"/>
-                            <constraint firstItem="ejZ-DS-Uqv" firstAttribute="top" secondItem="DMH-Zt-wKy" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Cy4-hg-y19"/>
-                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="leading" secondItem="ejZ-DS-Uqv" secondAttribute="leading" type="default" id="W7P-z4-RJu"/>
-                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="centerX" secondItem="kIi-Nc-YRg" secondAttribute="centerX" type="default" id="agH-Ct-sbq"/>
-                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="trailing" secondItem="ejZ-DS-Uqv" secondAttribute="trailing" type="default" id="eBG-cs-tmU"/>
-                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="top" secondItem="kIi-Nc-YRg" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="jdV-Fn-wjZ"/>
+                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="leading" secondItem="kIi-Nc-YRg" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Ftv-c2-Qul"/>
+                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="top" secondItem="3" secondAttribute="top" constant="162" id="HkK-QD-eLZ"/>
+                            <constraint firstItem="kIi-Nc-YRg" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="cUD-Ru-B7l"/>
+                            <constraint firstAttribute="trailing" secondItem="DMH-Zt-wKy" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="cWc-0P-fjR"/>
                             <constraint firstItem="hqG-Is-eVM" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="pRh-gN-sPu"/>
+                            <constraint firstItem="kIi-Nc-YRg" firstAttribute="top" secondItem="3" secondAttribute="top" constant="166" id="rcT-6g-T5M"/>
                             <constraint firstItem="hqG-Is-eVM" firstAttribute="top" secondItem="3" secondAttribute="top" constant="53" id="wle-Nd-2Ci"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="codeField" destination="DMH-Zt-wKy" id="zFd-LG-lgV"/>
                         <outlet property="fbUserLabel" destination="hqG-Is-eVM" id="Mgh-cS-JnW"/>
-                        <outlet property="okButton" destination="ejZ-DS-Uqv" id="wyw-Y2-JHL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
@@ -136,7 +121,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="2" kind="modal" modalTransitionStyle="flipHorizontal" id="r2Z-2u-nAo"/>
+                                    <segue destination="2" kind="modal" identifier="" modalTransitionStyle="flipHorizontal" id="r2Z-2u-nAo"/>
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZZj-5s-uGX">
