--- a/doyouagree/en.lproj/MainStoryboard.storyboard
+++ b/doyouagree/en.lproj/MainStoryboard.storyboard
@@ -12,7 +12,7 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" highlighted="YES" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DMH-Zt-wKy">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" highlighted="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DMH-Zt-wKy">
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" none="YES" keyboardKey="YES" updatesFrequently="YES"/>
                                 </accessibility>
@@ -187,7 +187,6 @@
                 <relationship kind="outlet" name="codeField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="fbUserLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="fbUserName" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="okButton" candidateClass="UIButton"/>
             </relationships>
         </class>
         <class className="dyaWebView" superclassName="UIViewController">
