--- a/doyouagree/en.lproj/MainStoryboard.storyboard
+++ b/doyouagree/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="13A569" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
@@ -23,7 +23,6 @@
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress" enablesReturnKeyAutomatically="YES"/>
                                 <connections>
                                     <outlet property="delegate" destination="2" id="0mm-W0-o5K"/>
-                                    <segue destination="inp-wL-rrB" kind="modal" identifier="enterCodeSegue" modalTransitionStyle="flipHorizontal" id="H2n-TD-ZOX"/>
                                 </connections>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Enter Code" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kIi-Nc-YRg">
@@ -54,6 +53,7 @@
                     <connections>
                         <outlet property="codeField" destination="DMH-Zt-wKy" id="zFd-LG-lgV"/>
                         <outlet property="fbUserLabel" destination="hqG-Is-eVM" id="Mgh-cS-JnW"/>
+                        <segue destination="inp-wL-rrB" kind="modal" identifier="enterCodeSegue" modalTransitionStyle="flipHorizontal" id="hwI-Z6-59P"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
@@ -121,7 +121,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="2" kind="modal" identifier="" modalTransitionStyle="flipHorizontal" id="r2Z-2u-nAo"/>
+                                    <segue destination="iLL-wN-T9Z" kind="unwind" unwindAction="returnToCodeEntry:" id="SmC-7G-WNt"/>
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZZj-5s-uGX">
@@ -170,39 +170,14 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pJV-MV-Hmj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="iLL-wN-T9Z" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="637" y="90"/>
+            <point key="canvasLocation" x="692" y="-139"/>
         </scene>
     </scenes>
     <resources>
         <image name="FB-LikeButton-online-114.png" width="114" height="48"/>
     </resources>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="dyaViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/dyaViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="codeField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="fbUserLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="fbUserName" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="dyaWebView" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/dyaWebView.h"/>
-            <relationships>
-                <relationship kind="action" name="okButton:" candidateClass="UIButton"/>
-                <relationship kind="action" name="share:" candidateClass="UIButton"/>
-                <relationship kind="action" name="sliderValue:" candidateClass="UISlider"/>
-                <relationship kind="outlet" name="agreeButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="shareButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="slider" candidateClass="UISlider"/>
-                <relationship kind="outlet" name="valueLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
